[gd_scene load_steps=4 format=3 uid="uid://banaafwsyugha"]

[ext_resource type="Script" uid="uid://cjtuamjclxxoq" path="res://scenes/Menu/Regras/Menu_regras/menu_principal_regras.gd" id="1_5o6xg"]
[ext_resource type="Texture2D" uid="uid://d2sj4pbnasco2" path="res://assets/background/bg_fracture_menu.jpg" id="1_qsdo8"]
[ext_resource type="Theme" uid="uid://diciublvqerpy" path="res://fonte/return_button.tres" id="3_0xdgw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5o6xg")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.389287, 0.389287, 0.389287, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qsdo8")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 250

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Introdução"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Tabuleiro" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" groups=["botoes_menu_regras"]]
layout_mode = 2
theme = ExtResource("3_0xdgw")
text = "Tabuleiro"

[node name="Tipo_carta" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" groups=["botoes_menu_regras"]]
layout_mode = 2
theme = ExtResource("3_0xdgw")
text = "Tipos de carta"

[node name="Dinamica_jogo" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" groups=["botoes_menu_regras"]]
layout_mode = 2
theme = ExtResource("3_0xdgw")
text = "Dinâmica"

[node name="Habilidades" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" groups=["botoes_menu_regras"]]
layout_mode = 2
theme = ExtResource("3_0xdgw")
text = "Habilidades"

[node name="batalha_final" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" groups=["botoes_menu_regras"]]
layout_mode = 2
theme = ExtResource("3_0xdgw")
text = "Batalha Final"

[node name="Sair" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" groups=["botoes_menu_regras"]]
layout_mode = 2
theme = ExtResource("3_0xdgw")
text = "Sair"

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1200, 700)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "
[fill]FRACTURE é um jogo de cartas 1vs1 estratégico e competitivo ambientado em um universo onde diversos mundos se interligaram a partir de fraturas que transcendem o espaço-tempo, onde você escolherá uma das raças dominantes de cada mundo para batalhar numa guerra por recursos e pela supremacia. A guerra é dividida em cinco batalhas no tabuleiro e seu objetivo é vencer três ou mais.[/fill]"
tab_size = 24
